fix overflow and optimize card

--- a/style.css
+++ b/style.css
@@ -14,24 +14,27 @@
     z-index: 1;
 }
 
+html{
+    position: fixed;
+    height: 100%;
+    overflow: hidden;
+}
+
 body{
     background: radial-gradient(69.34% 69.34% at 50% 50%, #170604 0%, #3E0021 77%, #540041 100%);
-    height: 100vh;
-    width: 100vw;
+
+    width: 100vw; 
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+    
     margin: 0px;
     padding: 0px;
 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
-    overflow: hidden;
-
-}
-
-@keyframes background_win {
-    0%, 100% {opacity: 0;}
-    25% {opacity: 1;}
 }
 
 
@@ -91,6 +94,7 @@ body:not(.won) > #cards_container > .card:hover > svg{
 }
 
 .card.coin.won > svg{
+    animation: won_animation 2s linear;
 
     transition: 0.6s ease-in-out;
     transform: scale(1.2, 1.2) !important;
@@ -145,7 +149,6 @@ body.won > #cards_container > .card.death > svg{
 }
 
 
-
 /*-------------------- setting --------------------*/
 #setting_container{
     margin: 3vmax;
@@ -171,7 +174,7 @@ body.won > #cards_container > .card.death > svg{
     margin: 2.5vmin;
 
     text-align: end;
-    font: 800 1vmin/2.5vmin 'Inter', sans-serif;;
+    font: 800 0.7vmax/1.5vmax 'Inter', sans-serif;;
     
     transition: 0.5s ease-in-out;
     position: absolute;
